--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Projeto Currículo</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="assents/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <section>
             <hr>
                 <h1>Currículo</h1>
-                <img class="foto-perfil" src="assents/imagens/Eu.jpg">
+                <img class="foto-perfil" src="Eu.jpg">
             </hr>
         </section>
 
